# IPulse

./: .gitignore  README.md  docker-compose.yml
cpp-image-processing/: CMakeLists.txt  Dockerfile
cpp-image-processing/src/: base64.cpp  base64.h  imageProcessor.h  main.cpp  testing.cpp
nginx/: Dockerfile  nginx.conf
nodejs-backend/: Dockerfile
nodejs-backend/src/: app.js  auth-service.js  blog-service.js  image-service.js  mongoose-init.js  package-lock.json  package.json  redis-service.js  server.js  tailwind.config.js
nodejs-backend/src/config/: index.js  sessionConfig.js
nodejs-backend/src/controllers/: blogController.js  imagesController.js  publicController.js  userController.js
nodejs-backend/src/middleware/: authMiddleware.js  cloudinaryMiddleware.js  commonMiddleware.js
nodejs-backend/src/public/css/: output.css
nodejs-backend/src/public/js/: dashboard-forms.js  dashboard-recommendations.js  dashboard.js  delete-images.js  image-editor.js  nav-bar.js  search-form.js  search-recommendations.js  theme-controller.js
nodejs-backend/src/routes/: blog.js  images.js  public.js  users.js
nodejs-backend/src/services/: image-service.js  mongoose-init.js  redis-service.js
nodejs-backend/src/views/: 404.ejs  about-us.ejs  about_us.ejs  another.ejs  blog.ejs  dashboard.ejs  homepage.ejs  image-editor.ejs  image-upload.ejs  login.ejs  privacy-policy.ejs  profile-form.ejs  register.ejs  search.ejs  support.ejs  terms-of-service.ejs
nodejs-backend/src/views/partials/: drawer-footer.ejs  drawer-header.ejs  footer.ejs  header.ejs
